--- a/styles/login.css
+++ b/styles/login.css
@@ -50,6 +50,11 @@ section .contentBx {
     background-color: var(--white);
 }
 
+.logo {
+    width: 373.22px;
+    height: 50px;
+}
+
 section .contentBx .formBx {
     width: 70%;
     border: 1px solid #C9C9C9;
