--- a/styles/login.css
+++ b/styles/login.css
@@ -170,7 +170,20 @@ section .contentBx .formBx {
     border-radius: 100px;
     background: linear-gradient(90deg, #8C2828 0%, #E85E5E 100%);
     box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
-    color: var(--white)
+    color: var(--white);
+    text-decoration: none;
+}
+
+.login-text {
+    color: var(--white, #FFF);
+
+    /* Paragraph 1/Medium */
+    font-family: Work Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 28px;
+    /* 150% */
 }
 
 
@@ -339,5 +352,14 @@ section .contentBx .formBx {
         background: linear-gradient(90deg, #8C2828 0%, #E85E5E 100%);
         box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
         color: var(--white)
+    }
+
+    .login-text {
+        color: var(--white, #FFF);
+        font-family: 'Work Sans';
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 24px;
     }
 }
