--- a/styles/multi station department.css
+++ b/styles/multi station department.css
@@ -83,12 +83,12 @@ body {
 }
 
 .section2 {
-    width: 100% !important;
+    width: 100%;
     height: 997px;
     border-radius: 30px;
     background: var(--white);
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
-    padding: 30px;
+    padding: 30px 15px 30px 30px;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -169,6 +169,7 @@ body {
     font-style: normal;
     font-size: 16px;
     line-height: 24px;
+    outline: none;
 }
 
 textarea {
@@ -181,6 +182,7 @@ textarea {
     font-size: 16px;
     line-height: 24px;
     resize: none;
+    outline: none;
 }
 
 .action {
@@ -263,6 +265,7 @@ textarea {
     }
 
     .section1 {
+        width: calc(500px * var(--multiplier-1600));
         height: calc(997px * var(--multiplier-1600));
         border-radius: calc(30px * var(--multiplier-1600));
         box-shadow: 0 4px calc(30px * var(--multiplier-1600)) 0 rgba(0, 0, 0, 0.08);
@@ -277,11 +280,11 @@ textarea {
     }
 
     .section2 {
-        width: calc(610px * var(--multiplier-1600));
+        width: calc(740px * var(--multiplier-1600));
         height: calc(997px * var(--multiplier-1600));
         border-radius: calc(30px * var(--multiplier-1600));
         box-shadow: 0 4px calc(30px * var(--multiplier-1600)) 0 rgba(0, 0, 0, 0.08);
-        padding: calc(30px * var(--multiplier-1600));
+        padding: calc(30px * var(--multiplier-1600)) calc(15px * var(--multiplier-1600)) calc(30px * var(--multiplier-1600)) calc(30px * var(--multiplier-1600));
     }
 
     .section2-innerSection {
@@ -303,6 +306,7 @@ textarea {
     }
 
     .section3 {
+        width: calc(500px * var(--multiplier-1600));
         height: calc(997px * var(--multiplier-1600));
         border-radius: calc(30px * var(--multiplier-1600));
         box-shadow: 0 4px calc(30px * var(--multiplier-1600)) 0 rgba(0, 0, 0, 0.08);
@@ -381,6 +385,7 @@ textarea {
     }
 
     .section1 {
+        width: 60%;
         height: calc(997px * var(--multiplier-1440));
         border-radius: calc(30px * var(--multiplier-1440));
         box-shadow: 0 4px calc(30px * var(--multiplier-1440)) 0 rgba(0, 0, 0, 0.08);
@@ -395,11 +400,11 @@ textarea {
     }
 
     .section2 {
-        width: calc(610px * var(--multiplier-1440));
+        width: 100%;
         height: calc(997px * var(--multiplier-1440));
         border-radius: calc(30px * var(--multiplier-1440));
         box-shadow: 0 4px calc(30px * var(--multiplier-1440)) 0 rgba(0, 0, 0, 0.08);
-        padding: calc(30px * var(--multiplier-1440));
+        padding: calc(30px * var(--multiplier-1440)) calc(15px * var(--multiplier-1440)) calc(30px * var(--multiplier-1440)) calc(30px * var(--multiplier-1440));
     }
 
     .section2-innerSection {
@@ -421,6 +426,7 @@ textarea {
     }
 
     .section3 {
+        width: 60%;
         height: calc(997px * var(--multiplier-1440));
         border-radius: calc(30px * var(--multiplier-1440));
         box-shadow: 0 4px calc(30px * var(--multiplier-1440)) 0 rgba(0, 0, 0, 0.08);
@@ -517,7 +523,7 @@ textarea {
         height: calc(997px * var(--multiplier-1366));
         border-radius: calc(30px * var(--multiplier-1366));
         box-shadow: 0 4px calc(30px * var(--multiplier-1366)) 0 rgba(0, 0, 0, 0.08);
-        padding: calc(30px * var(--multiplier-1366));
+        padding: calc(30px * var(--multiplier-1366)) calc(15px * var(--multiplier-1366)) calc(30px * var(--multiplier-1366)) calc(30px * var(--multiplier-1366));
     }
 
     .section2-innerSection {
@@ -633,11 +639,10 @@ textarea {
     }
 
     .section2 {
-        width: calc(610px * var(--multiplier-1280));
         height: calc(997px * var(--multiplier-1280));
         border-radius: calc(30px * var(--multiplier-1280));
         box-shadow: 0 4px calc(30px * var(--multiplier-1280)) 0 rgba(0, 0, 0, 0.08);
-        padding: calc(30px * var(--multiplier-1280));
+        padding: calc(30px * var(--multiplier-1280)) calc(15px * var(--multiplier-1280)) calc(30px * var(--multiplier-1280)) calc(30px * var(--multiplier-1280));
     }
 
     .section2-innerSection {
