--- a/styles/login.css
+++ b/styles/login.css
@@ -43,7 +43,7 @@ section .imgBx {
 
 section .contentBx {
     width: 50%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
