--- a/styles/final.css
+++ b/styles/final.css
@@ -241,119 +241,120 @@ body {
 }
 
 @media screen and (max-width:1280px) {
+
     .header {
-        height: 90px;
-        padding: 0px 50px 0px 50px;
+        height: calc(90px * var(--multiplier-1280));
+        padding: 0 calc(50px * var(--multiplier-1280)) 0 calc(50px * var(--multiplier-1280));
         box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.05);
     }
-    
+
     .logo {
-        width: 260.556px;
-        height: 35px;
+        width: calc(260.556px * var(--multiplier-1280));
+        height: calc(35px * var(--multiplier-1280));
     }
-    
+
     .logout {
-        width: 127px;
-        height: 50px;
-        padding: 8px 15px;
-        gap: 10px;
-        border-radius: 100px;
+        width: calc(127px * var(--multiplier-1280));
+        height: calc(50px * var(--multiplier-1280));
+        padding: calc(8px * var(--multiplier-1280)) calc(15px * var(--multiplier-1280));
+        gap: calc(10px * var(--multiplier-1280));
+        border-radius: calc(100px * var(--multiplier-1280));
     }
-    
+
     .logout-logo {
-        width: 32px;
-        height: 32px;
+        width: calc(32px * var(--multiplier-1280));
+        height: calc(32px * var(--multiplier-1280));
     }
-    
+
     .main {
         padding: 20px;
     }
-    
+
     .container {
         padding: 50px;
     }
-    
+
     .inner-container {
         gap: 50px;
         padding: 50px !important;
     }
-    
+
     .section1 {
         height: 162px;
     }
-    
+
     .button1 {
         width: 539px;
         height: 162px;
         padding: 47px auto;
         font-size: 16px;
         line-height: 24px;
-    
+
         border-radius: 100px;
         border: 5.786px solid #9E2F2F;
     }
-    
+
     .button-text {
         gap: 11px;
     }
-    
+
     .text {
         font-size: 57.857px;
     }
-    
+
     .right-content {
         gap: 10px;
     }
-    
+
     .section2 {
         height: 234px;
         border-radius: 30px;
         box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
         gap: 30px;
     }
-    
+
     .section-heading {
         margin: 30px 0px 0px 0px;
         font-size: 40px;
     }
-    
+
     .button-group {
         width: 1440px;
         gap: 20px;
     }
-    
+
     .primary-btn {
         padding: 30px 0px;
         border-radius: 10px;
         font-size: 35px;
         line-height: 24px;
-    
+
     }
-    
+
     .button-section {
         width: 466px;
     }
-    
+
     .section3 {
         height: 495px;
         border-radius: 30px;
         box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
         gap: 30px;
     }
-    
+
     .location {
         gap: 20px;
         padding-bottom: 38px;
     }
-    
+
     .address {
         font-size: 35px;
     }
-    
+
     .emergency-text {
         font-size: 35px;
     }
-    
+
     .bottom-text {
         margin-bottom: 15px;
         padding: 0px 10px;
