--- a/styles/widgets.css
+++ b/styles/widgets.css
@@ -78,11 +78,14 @@ body {
     border: 1px solid #EBEBEB;
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .atmosphere-div {
     margin-top: 10px;
-    width: 100%;
+    width: 90%;
     height: 95%;
 }
 
@@ -347,6 +350,10 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+    }
+
+    .atmosphere-div {
+        width: 100%;
     }
 }
 
