--- a/styles/final.css
+++ b/styles/final.css
@@ -55,7 +55,7 @@ body {
 .main {
     padding: 20px;
     height: auto;
-    background-color: red;
+    background-color: #E57D03;
 }
 
 .container {
@@ -65,7 +65,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px;
+    padding: 50px 100px;
     background-color: var(--white);
 }
 
@@ -75,7 +75,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 50px;
-    padding: 50px !important;
+    margin: 50px;
 }
 
 .section1 {
@@ -102,9 +102,8 @@ body {
     font-weight: 500;
     line-height: 24px;
 
-    border-radius: 100px;
-    border: 5.786px solid #9E2F2F;
-    background: linear-gradient(180deg, #F55 0%, #8C2828 100%);
+    border-radius: 40px;
+    background: #8C2828;
 }
 
 .button-text {
@@ -132,20 +131,21 @@ body {
 
 .section2 {
     width: 100%;
-    height: 234px;
+    height: auto;
     border-radius: 30px;
     border: 1px solid #363636;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
     gap: 30px;
+    padding: 30px 0;
 }
 
 .section-heading {
-    margin: 30px 0px 0px 0px;
     color: var(--Dark, #000);
-    font-family: Work Sans;
+    font-family: 'Work Sans';
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
@@ -153,14 +153,18 @@ body {
 }
 
 .button-group {
-    width: 1440px;
+    width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 20px;
 }
 
 .primary-btn {
     width: 100%;
+    min-width: 250px;
+    max-width: 466px;
     padding: 30px 0px;
     display: flex;
     justify-content: center;
@@ -180,12 +184,17 @@ body {
 }
 
 .button-section {
-    width: 466px;
+    width: 100% !important;
+    min-width: 250px;
+    max-width: 466px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .section3 {
     width: 100%;
-    height: 495px;
+    height: auto;
     border-radius: 30px;
     border: 1px solid #363636;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
@@ -193,6 +202,7 @@ body {
     align-items: center;
     flex-direction: column;
     gap: 30px;
+    padding: 30px 0;
 }
 
 .location {
@@ -240,8 +250,366 @@ body {
     font-weight: 600;
 }
 
-@media screen and (max-width:1280px) {
 
+
+@media screen and (max-width:1600px) {
+    .header {
+        height: calc(90px * var(--multiplier-1600));
+        padding: 0 calc(50px * var(--multiplier-1600)) 0 calc(50px * var(--multiplier-1600));
+        box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.05);
+    }
+    
+    .logo {
+        width: calc(260.556px * var(--multiplier-1600));
+        height: calc(35px * var(--multiplier-1600));
+    }
+    
+    .logout {
+        width: calc(127px * var(--multiplier-1600));
+        height: calc(50px * var(--multiplier-1600));
+        padding: calc(8px * var(--multiplier-1600)) calc(15px * var(--multiplier-1600));
+        gap: calc(10px * var(--multiplier-1600));
+        border-radius: calc(100px * var(--multiplier-1600));
+    }
+    
+    .logout-logo {
+        width: calc(32px * var(--multiplier-1600));
+        height: calc(32px * var(--multiplier-1600));
+    }
+    
+    .main {
+        padding: calc(20px * var(--multiplier-1600));
+    }
+    
+    .container {
+        padding: calc(100px * var(--multiplier-1600)) auto;
+    }
+    
+    .inner-container {
+        width: calc(1500px * var(--multiplier-1600));
+        gap: calc(50px * var(--multiplier-1600));
+        margin: calc(50px * var(--multiplier-1600));
+    }
+    
+    .section1 {
+        height: calc(162px * var(--multiplier-1600));
+    }
+    
+    .button1 {
+        width: calc(539px * var(--multiplier-1600));
+        height: calc(162px * var(--multiplier-1600));
+        padding: calc(47px * var(--multiplier-1600)) auto;
+        font-size: calc(16px * var(--multiplier-1600));
+        line-height: calc(24px * var(--multiplier-1600));
+        border-radius: calc(40px * var(--multiplier-1600));
+    }
+    
+    .button-text {
+        gap: calc(11px * var(--multiplier-1600));
+    }
+    
+    .text {
+        font-size: calc(57.857px * var(--multiplier-1600));
+    }
+    
+    .right-content {
+        gap: calc(10px * var(--multiplier-1600));
+    }
+    
+    .section2 {
+        border-radius: calc(30px * var(--multiplier-1600));
+        box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
+        gap: calc(30px * var(--multiplier-1600));
+        padding: calc(30px * var(--multiplier-1600)) 0;
+    }
+    
+    .section-heading {
+        font-size: calc(40px * var(--multiplier-1600));
+    }
+    
+    .button-group {
+        gap: calc(20px * var(--multiplier-1600));
+    }
+    
+    .primary-btn {
+        min-width: calc(250px * var(--multiplier-1600));
+        max-width: calc(466px * var(--multiplier-1600));
+        padding: calc(30px * var(--multiplier-1600)) 0px;
+        border-radius: calc(10px * var(--multiplier-1600));
+        font-size: calc(35px * var(--multiplier-1600));
+        line-height: calc(24px * var(--multiplier-1600));
+    }
+
+    .button-section {
+        min-width: calc(250px * var(--multiplier-1600));
+        max-width: calc(466px * var(--multiplier-1600));
+    }
+    
+    .section3 {
+        border-radius: calc(30px * var(--multiplier-1600));
+        box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
+        gap: calc(30px * var(--multiplier-1600));
+        padding: calc(30px * var(--multiplier-1600)) 0;
+    }
+    
+    .location {
+        gap: calc(20px * var(--multiplier-1600));
+        padding-bottom: calc(38px * var(--multiplier-1600));
+    }
+    
+    .address {
+        font-size: calc(35px * var(--multiplier-1600));
+    }
+    
+    .emergency-text {
+        font-size: calc(35px * var(--multiplier-1600));
+    }
+    
+    .bottom-text {
+        margin-bottom: calc(15px * var(--multiplier-1600));
+        padding: 0px calc(10px * var(--multiplier-1600));
+    }
+}
+
+@media screen and (max-width:1440px) {
+    .header {
+        height: calc(90px * var(--multiplier-1440));
+        padding: 0 calc(50px * var(--multiplier-1440)) 0 calc(50px * var(--multiplier-1440));
+        box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.05);
+    }
+    
+    .logo {
+        width: calc(260.556px * var(--multiplier-1440));
+        height: calc(35px * var(--multiplier-1440));
+    }
+    
+    .logout {
+        width: calc(127px * var(--multiplier-1440));
+        height: calc(50px * var(--multiplier-1440));
+        padding: calc(8px * var(--multiplier-1440)) calc(15px * var(--multiplier-1440));
+        gap: calc(10px * var(--multiplier-1440));
+        border-radius: calc(100px * var(--multiplier-1440));
+    }
+    
+    .logout-logo {
+        width: calc(32px * var(--multiplier-1440));
+        height: calc(32px * var(--multiplier-1440));
+    }
+    
+    .main {
+        padding: calc(20px * var(--multiplier-1440));
+    }
+    
+    .container {
+        padding: calc(50px * var(--multiplier-1440)) auto;
+    }
+    
+    .inner-container {
+        width: calc(1500px * var(--multiplier-1440));
+        gap: calc(50px * var(--multiplier-1440));
+        margin: calc(50px * var(--multiplier-1440));
+    }
+    
+    .section1 {
+        height: calc(162px * var(--multiplier-1440));
+    }
+    
+    .button1 {
+        width: calc(539px * var(--multiplier-1440));
+        height: calc(162px * var(--multiplier-1440));
+        padding: calc(47px * var(--multiplier-1440)) auto;
+        font-size: calc(16px * var(--multiplier-1440));
+        line-height: calc(24px * var(--multiplier-1440));
+        border-radius: calc(40px * var(--multiplier-1440));
+    }
+    
+    .button-text {
+        gap: calc(11px * var(--multiplier-1440));
+    }
+    
+    .text {
+        font-size: calc(57.857px * var(--multiplier-1440));
+    }
+    
+    .right-content {
+        gap: calc(10px * var(--multiplier-1440));
+    }
+    
+    .section2 {
+        border-radius: calc(30px * var(--multiplier-1440));
+        box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
+        gap: calc(30px * var(--multiplier-1440));
+        padding: calc(30px * var(--multiplier-1440)) 0;
+    }
+    
+    .section-heading {
+        font-size: calc(40px * var(--multiplier-1440));
+    }
+    
+    .button-group {
+        gap: calc(20px * var(--multiplier-1440));
+    }
+    
+    .primary-btn {
+        min-width: calc(250px * var(--multiplier-1440));
+        max-width: calc(466px * var(--multiplier-1440));
+        padding: calc(30px * var(--multiplier-1440)) 0px;
+        border-radius: calc(10px * var(--multiplier-1440));
+        font-size: calc(35px * var(--multiplier-1440));
+        line-height: calc(24px * var(--multiplier-1440));
+    }
+
+    .button-section {
+        min-width: calc(250px * var(--multiplier-1440));
+        max-width: calc(466px * var(--multiplier-1440));
+    }
+    
+    .section3 {
+        border-radius: calc(30px * var(--multiplier-1440));
+        box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
+        gap: calc(30px * var(--multiplier-1440));
+        padding: calc(30px * var(--multiplier-1440)) 0;
+    }
+    
+    .location {
+        gap: calc(20px * var(--multiplier-1440));
+        padding-bottom: calc(38px * var(--multiplier-1440));
+    }
+    
+    .address {
+        font-size: calc(35px * var(--multiplier-1440));
+    }
+    
+    .emergency-text {
+        font-size: calc(35px * var(--multiplier-1440));
+    }
+    
+    .bottom-text {
+        margin-bottom: calc(15px * var(--multiplier-1440));
+        padding: 0px calc(10px * var(--multiplier-1440));
+    }
+}
+
+@media screen and (max-width:1366px) {
+    .header {
+        height: calc(90px * var(--multiplier-1366));
+        padding: 0 calc(50px * var(--multiplier-1366)) 0 calc(50px * var(--multiplier-1366));
+        box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.05);
+    }
+    
+    .logo {
+        width: calc(260.556px * var(--multiplier-1366));
+        height: calc(35px * var(--multiplier-1366));
+    }
+    
+    .logout {
+        width: calc(127px * var(--multiplier-1366));
+        height: calc(50px * var(--multiplier-1366));
+        padding: calc(8px * var(--multiplier-1366)) calc(15px * var(--multiplier-1366));
+        gap: calc(10px * var(--multiplier-1366));
+        border-radius: calc(100px * var(--multiplier-1366));
+    }
+    
+    .logout-logo {
+        width: calc(32px * var(--multiplier-1366));
+        height: calc(32px * var(--multiplier-1366));
+    }
+    
+    .main {
+        padding: calc(20px * var(--multiplier-1366));
+    }
+    
+    .container {
+        padding: calc(50px * var(--multiplier-1366)) auto;
+    }
+    
+    .inner-container {
+        width: calc(1500px * var(--multiplier-1366));
+        gap: calc(50px * var(--multiplier-1366));
+        margin: calc(50px * var(--multiplier-1366));
+    }
+    
+    .section1 {
+        height: calc(162px * var(--multiplier-1366));
+    }
+    
+    .button1 {
+        width: calc(539px * var(--multiplier-1366));
+        height: calc(162px * var(--multiplier-1366));
+        padding: calc(47px * var(--multiplier-1366)) auto;
+        font-size: calc(16px * var(--multiplier-1366));
+        line-height: calc(24px * var(--multiplier-1366));
+        border-radius: calc(40px * var(--multiplier-1366));
+    }
+    
+    .button-text {
+        gap: calc(11px * var(--multiplier-1366));
+    }
+    
+    .text {
+        font-size: calc(57.857px * var(--multiplier-1366));
+    }
+    
+    .right-content {
+        gap: calc(10px * var(--multiplier-1366));
+    }
+    
+    .section2 {
+        border-radius: calc(30px * var(--multiplier-1366));
+        box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
+        gap: calc(30px * var(--multiplier-1366));
+        padding: calc(30px * var(--multiplier-1366)) 0;
+    }
+    
+    .section-heading {
+        font-size: calc(40px * var(--multiplier-1366));
+    }
+    
+    .button-group {
+        gap: calc(20px * var(--multiplier-1366));
+    }
+    
+    .primary-btn {
+        min-width: calc(250px * var(--multiplier-1366));
+        max-width: calc(466px * var(--multiplier-1366));
+        padding: calc(30px * var(--multiplier-1366)) 0px;
+        border-radius: calc(10px * var(--multiplier-1366));
+        font-size: calc(35px * var(--multiplier-1366));
+        line-height: calc(24px * var(--multiplier-1366));
+    }
+
+    .button-section {
+        min-width: calc(250px * var(--multiplier-1366));
+        max-width: calc(466px * var(--multiplier-1366));
+    }
+    
+    .section3 {
+        border-radius: calc(30px * var(--multiplier-1366));
+        box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
+        gap: calc(30px * var(--multiplier-1366));
+        padding: calc(30px * var(--multiplier-1366)) 0;
+    }
+    
+    .location {
+        gap: calc(20px * var(--multiplier-1366));
+        padding-bottom: calc(38px * var(--multiplier-1366));
+    }
+    
+    .address {
+        font-size: calc(35px * var(--multiplier-1366));
+    }
+    
+    .emergency-text {
+        font-size: calc(35px * var(--multiplier-1366));
+    }
+    
+    .bottom-text {
+        margin-bottom: calc(15px * var(--multiplier-1366));
+        padding: 0px calc(10px * var(--multiplier-1366));
+    }
+}
+
+@media screen and (max-width:1280px) {
     .header {
         height: calc(90px * var(--multiplier-1280));
         padding: 0 calc(50px * var(--multiplier-1280)) 0 calc(50px * var(--multiplier-1280));
@@ -271,12 +639,13 @@ body {
     }
     
     .container {
-        padding: calc(50px * var(--multiplier-1280));
+        padding: calc(50px * var(--multiplier-1280)) auto;
     }
     
     .inner-container {
+        width: calc(1500px * var(--multiplier-1280));
         gap: calc(50px * var(--multiplier-1280));
-        padding: calc(50px * var(--multiplier-1280)) !important;
+        margin: calc(50px * var(--multiplier-1280));
     }
     
     .section1 {
@@ -289,9 +658,7 @@ body {
         padding: calc(47px * var(--multiplier-1280)) auto;
         font-size: calc(16px * var(--multiplier-1280));
         line-height: calc(24px * var(--multiplier-1280));
-    
-        border-radius: calc(100px * var(--multiplier-1280));
-        border: calc(5.786px * var(--multiplier-1280)) solid #9E2F2F;
+        border-radius: calc(40px * var(--multiplier-1280));
     }
     
     .button-text {
@@ -307,38 +674,39 @@ body {
     }
     
     .section2 {
-        height: calc(234px * var(--multiplier-1280));
         border-radius: calc(30px * var(--multiplier-1280));
         box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
         gap: calc(30px * var(--multiplier-1280));
+        padding: calc(30px * var(--multiplier-1280)) 0;
     }
     
     .section-heading {
-        margin: calc(30px * var(--multiplier-1280)) 0px 0px 0px;
         font-size: calc(40px * var(--multiplier-1280));
     }
     
     .button-group {
-        width: calc(1440px * var(--multiplier-1280));
         gap: calc(20px * var(--multiplier-1280));
     }
     
     .primary-btn {
+        min-width: calc(250px * var(--multiplier-1280));
+        max-width: calc(466px * var(--multiplier-1280));
         padding: calc(30px * var(--multiplier-1280)) 0px;
         border-radius: calc(10px * var(--multiplier-1280));
         font-size: calc(35px * var(--multiplier-1280));
         line-height: calc(24px * var(--multiplier-1280));
     }
-    
+
     .button-section {
-        width: calc(466px * var(--multiplier-1280));
+        min-width: calc(250px * var(--multiplier-1280));
+        max-width: calc(466px * var(--multiplier-1280));
     }
     
     .section3 {
-        height: calc(495px * var(--multiplier-1280));
         border-radius: calc(30px * var(--multiplier-1280));
         box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
         gap: calc(30px * var(--multiplier-1280));
+        padding: calc(30px * var(--multiplier-1280)) 0;
     }
     
     .location {
